// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AVS mismatch card renders correctly when AVS check is disabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="avs-mismatch-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            AVS Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-1"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-1"
              >
                Enable AVS Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter compares the street number and the post code submitted by the customer against the data on file with the card issuer. When enabled the payment will be blocked.
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Buyers who can provide the street number and post code on file with the issuing bank are more likely to be the actual account holder. AVS matches, however, are not a guarantee.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`AVS mismatch card renders correctly when AVS check is enabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="avs-mismatch-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div>
          <p
            class="fraud-protection-rule-card-header"
          >
            AVS Mismatch
          </p>
        </div>
        <div
          class="fraud-protection-rule-toggle"
        >
          <div
            class="components-base-control components-toggle-control fraud-protection-rule-toggle-toggle emotion-6 emotion-7"
          >
            <div
              class="components-base-control__field emotion-8 emotion-9"
            >
              <span
                class="components-form-toggle"
              >
                <input
                  class="components-form-toggle__input"
                  id="inspector-toggle-control-0"
                  type="checkbox"
                />
                <span
                  class="components-form-toggle__track"
                />
                <span
                  class="components-form-toggle__thumb"
                />
              </span>
              <label
                class="components-toggle-control__label"
                for="inspector-toggle-control-0"
              >
                Enable AVS Mismatch filter
              </label>
            </div>
          </div>
          <div
            class="fraud-protection-rule-toggle-description"
          >
            This filter compares the street number and the post code submitted by the customer against the data on file with the card issuer. When enabled the payment will be blocked.
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Buyers who can provide the street number and post code on file with the issuing bank are more likely to be the actual account holder. AVS matches, however, are not a guarantee.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
